--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,154 @@
+@import url("https://fonts.googleapis.com/css?family=Raleway:400,500");
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  list-style: none;
+  vertical-align: baseline;
+  background-image: url("https://www.vpesports.com/wp-content/uploads/2019/01/marcus-aurelius.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  color: white;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+div {
+  position: relative;
+  z-index: 2;
+}
+
+body {
+  background-color: #333;
+  color: #333;
+  font-family: "Raleway", sans-serif;
+  font-weight: 400;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+.footer {
+  width: 450px;
+  text-align: center;
+  display: block;
+  margin: 20px auto 30px auto;
+  font-size: 0.8em;
+  color: #fff;
+}
+#quote-box {
+  border-radius: 3px;
+  position: relative;
+  margin: 8% auto auto auto;
+  width: 450px;
+  padding: 40px 50px;
+  display: table;
+  background-color: #fff;
+  color: white;
+
+  background-image: url("https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/1ee91411729143.560fc51d5a378.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+
+  border: 5px solid white;
+
+  /*   box-shadow: 5px 10px white; */
+
+  opacity: 0.9;
+  transition: 1s;
+}
+
+.quote-text {
+  text-align: center;
+  width: 450px;
+  height: auto;
+  clear: both;
+  font-weight: 500;
+  font-size: 1.75em;
+}
+
+.quote-text i {
+  font-size: 1em;
+  margin-right: 0.4em;
+}
+
+.quote-author {
+  width: 450px;
+  height: auto;
+  clear: both;
+  padding-top: 20px;
+  font-size: 1em;
+  text-align: right;
+}
+.buttons {
+  width: 450px;
+  margin: auto;
+  display: block;
+  border: 1px solid white;
+}
+.button {
+  height: 38px;
+  border: none;
+  border-radius: 3px;
+  color: #fff;
+  background-color: #333;
+  outline: none;
+  font-size: 0.85em;
+  padding: 8px 18px 6px 18px;
+  margin-top: 30px;
+  opacity: 1;
+  cursor: pointer;
+}
+.button:hover {
+  opacity: 1;
+}
+#tweet-quote,
+#facebook-quote,
+#instagram-quote {
+  float: left;
+  padding: 0px;
+  padding-top: 8px;
+  text-align: center;
+  font-size: 1.2em;
+  margin-right: 5px;
+  height: 30px;
+  width: 40px;
+}
+#new-quote {
+  float: right;
+  transition: 0.3s;
+  border: 2px solid red;
+  /*   font-family: 'Yellowtail', cursive; */
+}
+
+a {
+  font-weight: 500;
+  text-decoration: none;
+  color: white;
+  transition: 0.3s;
+}
+
+a:hover {
+  color: red;
+  letter-spacing: 0.2px;
+  zoom: 100.2%;
+}
+
+#new-quote:hover {
+  color: white;
+  background-color: #8b0000;
+}
+
+#quote-box:hover {
+  opacity: 1;
+
+  background-image: url("https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/3320fb11729143.560fc4ab33254.jpg");
+}
+
+.text {
+  transition: 0.4s;
+}
+
+.Stoic-Quotes {
+  position: relative;
+  right: 18.5px;
+  top: 112.5px;
 }
